--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/app.css">
     <title>Responsive News Website</title>
 </head>
-<body>
 
+<body>
+<div class="page-header">
+    <div class="header-image"><img src="images/header.jpg" alt="Header icon" width="100" height="100"></div>
+    <div class="heading"><p>The Brighton Times</p></div>    
+</div>
 </body>
+
 </html>
