--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <div class="page-header">
-    <div class="header-image"><img src="images/header.jpg" alt="Header icon" width="100" height="100"></div>
+    <div class="header-image"><img src="images/city.png" alt="Header icon" width="100" height="100"></div>
     <div class="heading"><p>The Brighton Times</p></div>    
 </div>
 </body>
