--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 </head>
 
 <body>
-<div class="page-header">
-    <div class="header-image"><img src="images/city.png" alt="Header icon" width="100" height="100"></div>
-    <div class="heading"><p>The Brighton Times</p></div>    
-</div>
+    <div class="page-header">
+        <div class="header-image"><img src="images/city.png" alt="Header icon" width="100" height="100"></div>
+        <div class="heading">
+            <p>The Brighton Times</p>
+        </div>
+    </div>
+    <div class="navbar">
+        <div class="news">
+            <p>NEWS</p>
+        </div>
+        <div class="events">
+            <p>EVENTS</p>
+        </div>
+        <div class="culture">
+            <p>CULTURE</p>
+        </div>
+        <div class="blog">
+            <p>BLOG</p>
+        </div>
+    </div>
 </body>
 
 </html>
