Added main image and main headline

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 </head>
 
 <body>
+    <!-- page header -->
     <div class="page-header">
         <div class="header-image"><img src="images/city.png" alt="Header icon" width="100" height="100"></div>
         <div class="heading">
             <p>The Brighton Times</p>
         </div>
     </div>
+    <!-- page header end -->
+    <!-- navbar -->
     <div class="navbar">
         <div class="news">
             <p>NEWS</p>
@@ -28,6 +31,18 @@
             <p>BLOG</p>
         </div>
     </div>
+    <!-- navbar end -->
+    <!-- jumbotron -->
+    <div class="jumbotron">
+        <div class="main-image">
+                <img src="images/dog.jpg" alt="Main Image">
+                <div class="headline">
+                    <h2>Absolutely astonishing breaking news!</h2>
+                    <p>Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco. Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco.</p>
+                </div>
+        </div>
+    </div>
+    <!-- jumbotron end -->
 </body>
 
 </html>
