--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
         </div>
     </div>
     <!-- jumbotron end -->
+    <!-- top news section -->
+    <div class="top-news">
+    <div class="top">
+        <div class="title">Top News</div>
+        <div class="link">+more</div>
+    </div>
+    <div class="news">» Walter Taylor (23) dressed like a priest and shrived members of the congregation</div>
+    <div class="news">» Will Smith (23) stole and crashed a police car. He impersonated a policeman for half of the night</div>
+    <div class="news">» Scandal during a local MMA event. Spectator, Will Brown (31), beat one of the fighters</div>
+    <div class="news">» Completely drunk Brian Smith (19) confused a police car with a taxi</div>
+    <div class="news">» Harry Taylor (23) stole a coach with nuns in it. He ordered them to sing and drink alcohol</div>
+    <div class="news">» Brian Smith (19) started a fight with a group of policemen and run away. Search is in progress</div>
+    </div>
+    <!-- top news end -->
 </body>
 
 </html>
