Adding scoreboard to page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,48 @@
     <div class="news">» Brian Smith (19) started a fight with a group of policemen and run away. Search is in progress</div>
     </div>
     <!-- top news end -->
+    <!-- scoreboard section -->
+    <div class="scoreboard">
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Team</th>
+                <th>Score</th>
+                <th>Team</th>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>Bears</td>
+                <td>95 - 100</td>
+                <td>Cubs</td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>Otters</td>
+                <td>3 - 1</td>
+                <td>Cubs</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>Wolves</td>
+                <td>7 - 0</td>
+                <td>Panthers</td>
+            </tr>
+            <tr>
+                <td>Saturday</td>
+                <td>Hawks</td>
+                <td>11 - 12</td>
+                <td>Capons</td>
+            </tr>
+            <tr>
+                <td>Sunday</td>
+                <td>Stags</td>
+                <td>6 - 2</td>
+                <td>Foxes</td>
+            </tr>
+        </table>
+    </div>
+    <!-- scoreboard end -->
 </body>
 
 </html>
