Adding the weather widget

--- a/index.html
+++ b/index.html
@@ -99,6 +99,27 @@
         </table>
     </div>
     <!-- scoreboard end -->
+    <!-- weather widget -->
+    <div class="weather">
+        <div class="weather-title">
+            <p class="location">Brighton, UK</p>
+            <p class="loc-weather">Sunny</p>
+        </div>
+        <div class="current-weather">
+            <div id="cur-img"><img src="images/weather.png" alt="weather"></div>
+            <div id="cur-weather">
+                <p>13°C</p>
+            </div>
+        </div>
+        <div class="weather-week">
+            <div><div>Mon</div><img src="images/sunny.png"><div>13 °C</div></div>
+            <div><div>Tue</div><img src="images/cloudy.png"><div>13 °C</div></div>
+            <div><div>Wed</div><img src="images/cloudy.png"><div>13 °C</div></div>
+            <div><div>Thu</div><img src="images/rain.png"><div>13 °C</div></div>
+            <div><div>Fri</div><img src="images/sunny.png"><div>13 °C</div></div>
+        </div>
+    </div>
+    <!-- weather widget end -->
 </body>
 
 </html>
