Adding Footer section to the page

--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
         </div>
     </div>
     <!-- latest news end -->
+    <!-- footer section -->
+    <div class="footer">
+        <div class="contact">Contact US</div>
+        <div class="follow">Follow us on Twitter</div>
+        <div class="rss">RSS</div>
+    </div>
+    <!-- footer end -->
 </body>
 
 </html>
