fixed font sizes for mobile view

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="main-image">
                     <img src="images/dog.jpg" alt="Main Image">
                     <div class="headline">
-                        <h2>Absolutely astonishing breaking news!</h2>
+                        <h1>Absolutely astonishing breaking news!</h1>
                         <p>Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco. Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco.</p>
                     </div>
             </div>
@@ -211,7 +211,7 @@
                             yeh four loko.
                          </div>
             </div>
-            <div class="news">
+            <div class="news" id="last-news">
                     <div class="image">
                             <img src="images/dog.jpg"><p><b>Gastropub distillery Marfa farm-to-table</b></p>Gastropub distillery Marfa farm-to-table, Etsy Truffaut
             
