optimized for mobile view

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/app.css">
     <title>Responsive News Website</title>
 </head>
@@ -11,12 +12,12 @@
     <div class="container">
         <!-- page header -->
     <div class="page-header">
-            <div class="header-image"><img src="images/city.png" alt="Header icon" width="100" height="100"></div>
+            <div class="header-image"><img src="images/city.png" alt="Header icon" width="50" height="50"></div>
             <div class="heading">
                 <p>The Brighton Times</p>
             </div>
             <div class="three-icon">
-                    <img src="images/menu-button-of-three-lines.png" width="100" height="100">
+                    <img src="images/menu-button-of-three-lines.png" width="50" height="50">
             </div>
         </div>
         <!-- page header end -->
@@ -41,8 +42,8 @@
             <div class="main-image">
                     <img src="images/dog.jpg" alt="Main Image">
                     <div class="headline">
-                        <h1>Absolutely astonishing breaking news!</h1>
-                        <p>Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco. Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco.</p>
+                        <h4>Absolutely astonishing breaking news!</h4>
+                        <p>Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco.</p>
                     </div>
             </div>
         </div>
