--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
         </div>
         <!-- navbar end -->
+        <div class="switch-container">
         <!-- jumbotron -->
         <div class="jumbotron">
             <div class="main-image">
@@ -125,6 +126,7 @@
             </div>
         </div>
         <!-- weather widget end -->
+    </div>
         <!-- latest news section -->
         <div class="latest-news">
             <div class="latest">
