renaming classes, adding padding for weather widget and changing title font

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <div class="heading">
                 <p>The Brighton Times</p>
             </div>
-            <div class="three-icon">
-                <img src="images/menu-button-of-three-lines.png" width="50" height="50">
+            <div class="hamburger-icon">
+                <img src="images/hamburger-icon-img.png" width="50" height="50">
             </div>
         </div>
         <!-- page header end -->
         <!-- navbar -->
         <div class="navbar">
-            <div class="news">
+            <div class=news-item>
                 <p>NEWS</p>
             </div>
             <div class="events">
@@ -55,16 +55,19 @@
                     <div class="title">Top News</div>
                     <div class="link">+more</div>
                 </div>
-                <div class="news">» Walter Taylor (23) dressed like a priest and shrived members of the congregation
+                <div class=news-item>» Walter Taylor (23) dressed like a priest and shrived members of the congregation
                 </div>
-                <div class="news">» Will Smith (23) stole and crashed a police car. He impersonated a policeman for half
+                <div class=news-item>» Will Smith (23) stole and crashed a police car. He impersonated a policeman for
+                    half
                     of the night</div>
-                <div class="news">» Scandal during a local MMA event. Spectator, Will Brown (31), beat one of the
+                <div class=news-item>» Scandal during a local MMA event. Spectator, Will Brown (31), beat one of the
                     fighters</div>
-                <div class="news">» Completely drunk Brian Smith (19) confused a police car with a taxi</div>
-                <div class="news">» Harry Taylor (23) stole a coach with nuns in it. He ordered them to sing and drink
+                <div class=news-item>» Completely drunk Brian Smith (19) confused a police car with a taxi</div>
+                <div class=news-item>» Harry Taylor (23) stole a coach with nuns in it. He ordered them to sing and
+                    drink
                     alcohol</div>
-                <div class="news">» Brian Smith (19) started a fight with a group of policemen and run away. Search is
+                <div class=news-item>» Brian Smith (19) started a fight with a group of policemen and run away. Search
+                    is
                     in progress</div>
             </div>
             <!-- top news end -->
@@ -80,31 +83,36 @@
                     <tr>
                         <td>Friday</td>
                         <td>Bears</td>
-                        <td class="right-align">95</td><td class="left-align"><b>100</b></td>
+                        <td class="right-align">95</td>
+                        <td class="left-align"><b>100</b></td>
                         <td><b>Cubs</b></td>
                     </tr>
                     <tr>
                         <td>Friday</td>
                         <td><b>Otters</b></td>
-                        <td class="right-align"><b>3</b></td><td class="left-align">1</td>
+                        <td class="right-align"><b>3</b></td>
+                        <td class="left-align">1</td>
                         <td>Cubs</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
                         <td><b>Wolves</b></td>
-                        <td class="right-align"><b>7</b></td><td class="left-align">0</td>
+                        <td class="right-align"><b>7</b></td>
+                        <td class="left-align">0</td>
                         <td>Panthers</td>
                     </tr>
                     <tr>
                         <td>Saturday</td>
                         <td>Hawks</td>
-                        <td class="right-align">11</td><td class="left-align"><b>12</b></td>
+                        <td class="right-align">11</td>
+                        <td class="left-align"><b>12</b></td>
                         <td><b>Capons</b></td>
                     </tr>
                     <tr>
                         <td>Sunday</td>
                         <td><b>Stags</b></td>
-                        <td class="right-align"><b>6</b></td><td class="left-align">2</td>
+                        <td class="right-align"><b>6</b></td>
+                        <td class="left-align">2</td>
                         <td>Foxes</td>
                     </tr>
                 </table>
@@ -153,7 +161,7 @@
                 <div class="title">Latest News</div>
                 <div class="link">+more</div>
             </div>
-            <div class="news">
+            <div class=news-item>
                 <div class="image">
                     <img src="images/dog.jpg">
                     <p><b>Gastropub distillery Marfa farm-to-table</b></p>Gastropub distillery Marfa farm-to-table, Etsy
@@ -182,7 +190,7 @@
                     yeh four loko.
                 </div>
             </div>
-            <div class="news">
+            <div class=news-item>
                 <div class="image">
                     <img src="images/dog.jpg">
                     <p><b>Gastropub distillery Marfa farm-to-table</b></p>Gastropub distillery Marfa farm-to-table, Etsy
@@ -211,7 +219,7 @@
                     yeh four loko.
                 </div>
             </div>
-            <div class="news">
+            <div class=news-item>
                 <div class="image">
                     <img src="images/dog.jpg">
                     <p><b>Gastropub distillery Marfa farm-to-table</b></p>Gastropub distillery Marfa farm-to-table, Etsy
@@ -240,7 +248,7 @@
                     yeh four loko.
                 </div>
             </div>
-            <div class="news" id="last-news">
+            <div class=news-item id="last-news">
                 <div class="image">
                     <img src="images/dog.jpg">
                     <p><b>Gastropub distillery Marfa farm-to-table</b></p>Gastropub distillery Marfa farm-to-table, Etsy
