added facebook in footer

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <!-- footer section -->
         <div class="footer">
             <div class="contact">Contact US</div>
-            <div class="follow">Follow us on Twitter</div>
+            <div class="follow">Follow us on Facebook</div>
             <div class="rss">RSS</div>
         </div>
         <!-- footer end -->
