made changes to css for adjusting main image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!-- jumbotron -->
             <div class="jumbotron">
                 <div class="main-image">
-                    <img src="images/dog.jpg" alt="Main Image">
+                    <div class="img-holder"></div>
                     <div class="headline">
                         <h4>Absolutely astonishing breaking news!</h4>
                         <p>Organic raw denim Vice Keffiyeh lomo kickstarter art lomo kickstarter art four loco.</p>
