Adding css changes to make styling consistent with the design

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
         <!-- navbar -->
         <nav class="navbar">
             <div class=news-item>
-                <p>NEWS</p>
+                <p><a href="#">NEWS</a></p>
             </div>
             <div class="events">
-                <p>EVENTS</p>
+                <p><a href="#">EVENTS</a></p>
             </div>
             <div class="culture">
-                <p>CULTURE</p>
+                <p><a href="#">CULTURE</a></p>
             </div>
             <div class="blog">
-                <p>BLOG</p>
+                <p><a href="#">BLOG</a></p>
             </div>
         </nav>
         <!-- navbar end -->
@@ -295,9 +295,9 @@
         <!-- latest news end -->
         <!-- footer section -->
         <footer class="footer">
-            <div class="contact">Contact US</div>
-            <div class="follow">Follow us on Facebook</div>
-            <div class="rss">RSS</div>
+            <div class="contact"><a href="#">Contact Us</a></div>
+            <div class="follow"><a href="#">Follow us on Facebook</a></div>
+            <div class="rss"><a href="#">RSS</a></div>
         </footer>
         <!-- footer end -->
     </main>
